# create-agentic-dev

./: .gitignore  .markdownlint-cli2.yaml  .mise.toml  .yamlfmt.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  lefthook.yaml  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
.claude/: settings.json
.claude/rules/: git-workflow.md
.codex/: config.toml
.commons/: sync.yaml
.copilot/: mcp-config.json
.dev-config/: sync.yaml
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/rulesets/: protect-main.json
.github/workflows/: ci.yaml  pr-check.yaml  release-please.yaml  release.yaml  sync-skills.yaml
docs/: design.md  development.md  legacy-package.md  preset-authoring.md  releasing.md
examples/preset-example/: index.mjs  package.json
legacy-stub/: README.md  package.json
scripts/: apply-rulesets.sh  configure-repo.sh  gen-test-projects.ts
src/: action-versions.ts  ci.ts  cli.ts  generator.ts  index.ts  lib.ts  loader.ts  merge.ts  setup.ts  tree.ts  types.ts  utils.ts
src/i18n/: en.json  index.ts  ja.json
src/presets/: astro.ts  aws.ts  azure.ts  base.ts  batch.ts  bicep.ts  cdk.ts  claude-code.ts  cline.ts  cloudformation.ts  codex.ts  copilot.ts  cursor.ts  express.ts  fastapi.ts  gcp.ts  gemini.ts  hono.ts  index.ts  instruction-template.ts  library.ts  nextjs.ts  nuxt.ts  playwright.ts  python.ts  react.ts  sveltekit.ts  terraform.ts  typescript.ts  vue.ts
templates/astro/: tsconfig.json
templates/base/: .env.example  .gitignore  .mcp.json.example  .yamlfmt.yaml  .yamllint.yaml  CLAUDE.md  README.md  renovate.json
templates/fastapi/api/: pyproject.toml
templates/fastapi/api/tests/: test_main.py
templates/python/: pyproject.toml
templates/python/tests/: test_placeholder.py
tests/: apply.test.ts  cli.test.ts  content-validation.test.ts  edge-cases.test.ts  error-paths.test.ts  external-presets.smoke.test.ts  generator.test.ts  helpers.ts  i18n.test.ts  loader.test.ts  merge.test.ts  pairwise.test.ts  placeholder.test.ts  smoke.test.ts  tree.test.ts  utils.test.ts  verify.test.ts
(+144 files in other folders)
