[project]
name = "{{projectName}}"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle
  "ANN",    # flake8-annotations (gradual adoption)
  "ERA001", # commented-out code
  "T201",   # print
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
